# lens

./: .gitignore  README.md  cli.py  data_viz.ipynb  dataloader.py  pyproject.toml  simple_cnn.py  trainer.py
wandb/: latest-run
wandb/run-20250805_121529-tee17pke/: run-tee17pke.wandb
wandb/run-20250805_121529-tee17pke/files/: requirements.txt  wandb-metadata.json
