[tool.poetry]
name = "mnist-warmup"
version = "0.1.0"
description = "A small set of ML experiments on the mnist dataset."
authors = ["Abbas Shikari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.36.0"
ruff = "^0.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["data/", "venv/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["D100", "D104"]

[tool.poe.tasks]
lint = "ruff check ."
lintfix = "ruff check --fix ."
format = "ruff format ."

[tool.poe.tasks.fix]
sequence = ["format", "lintfix"]
