[tool.poetry]
name = "lens"
version = "0.1.0"
description = "A small set of ML experiments on the mnist dataset."
authors = ["Abbas Shikari"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.1.1"
jupyterlab = "^4.4.5"
matplotlib = "^3.10.5"
nbstripout = "^0.8.1"
tqdm = "^4.67.1"
torch = "^2.7.1"
torchvision = "^0.22.1"
wandb = "^0.21.0"
poethepoet = "^0.36.0"
nbconvert = "^7.16.6"


[tool.poetry.group.dev.dependencies]
poethepoet = "^0.36.0"
ruff = "^0.12.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310"
line-length = 120
extend-exclude = ["data/", "venv/", ".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["D100", "D104"]

[tool.poe.tasks]
lint = "ruff check ."
lintfix = "ruff check --fix ."
format = "ruff format ."
jupyter = "jupyter notebook"
jupyterlab = "jupyter lab"

[tool.poe.tasks.fix]
sequence = ["format", "lintfix"]
